# SDP

./: .gitignore  Design Patterns.md  README.md  SDP.sln  myVector.cpp  myVector.h  myVector.vcxproj  myVector.vcxproj.filters
DynamicArray/: DAIterator.inl  DynArr.cpp  DynArr.h  DynArr.inl
LinkedList/: CMakeLists.txt  abstractList.hpp  dllist.hpp  listTests.hpp  llist.hpp  main.cpp
Practice/Algorithms/: BFS.cpp  DFS.cpp  Dijkstra.cpp  PrimsMST.cpp  graph.h  weightedGraph.h
Practice/ToTestInVSStudio/: ToTestInVSStudio.sln  ToTestInVSStudio.vcxproj  ToTestInVSStudio.vcxproj.filters
Practice/doble_linked_list_week/: dll.hpp  insert_sorted.cpp  polish_and_product.cpp
Practice/lists_week/: findMidOfList.cpp  linkedListUtils.h  reorderList.cpp  reorderList1.cpp  task1.cpp  task2.cpp
Practice/more_of_linked_lists/: LinkedList_Stoycho.hpp  sortLinkedList_insertionS.cpp  task1.cpp  task2.cpp  task2_1.cpp
Practice/queue_week/: task1.cpp  task2.cpp  task2_1.cpp  task3.cpp
Practice/stack_week/: task1.cpp  task2.cpp  task3.cpp
Practice/trees_week/: build_binary_tr.cpp  contains_in_BST.cpp  (+6 more)
Project/: .gitignore  Base.txt  Plovdiv.txt  attraction_node.hpp  file_proccesing.hpp  main.cpp  route_towns.hpp  skipList.hpp  whatToDo.txt
Queue/: CmakeLists.txt  abstractQueue.hpp  lqueue.hpp  main.cpp  queue_tests.hpp  queue_utils.hpp  squeue.hpp
SDP_repos/: SDP_repos.sln  SDP_repos.vcxproj  SDP_repos.vcxproj.filters
Stack/: CMakeLists.txt  abstractStack.hpp  lstack.hpp  main.cpp  rstack.hpp  stack.hpp  stack_tests.hpp  unitTestStack.cpp
Vector/: myVector.h
(+40 files in other folders)
